[gd_scene load_steps=9 format=2]

[ext_resource path="res://audio/SoundEffects.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/sfx/GameOver.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/sfx/wall-movement.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/sfx/ButtonClick.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/sfx/FillLamp.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/sfx/PressurePlate_On.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/sfx/PressurePlate_Off.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/sfx/Stairs.wav" type="AudioStream" id=8]

[node name="SoundEffects" type="Node2D"]
script = ExtResource( 1 )

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="MoveWall" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -9.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="FillLamp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="PressurePlate_On" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="PressurePlate_Off" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="Stairs" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

